feat(学习视频): 增加部分学习视频

--- a/standard/index.html
+++ b/standard/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="/logo.png" type="image/x-icon">
     <meta name="description" content="">
     
-    <link rel="preload" href="/assets/css/0.styles.e4d8b86b.css" as="style"><link rel="preload" href="/assets/js/app.6bfe8101.js" as="script"><link rel="preload" href="/assets/js/2.ff92ebee.js" as="script"><link rel="preload" href="/assets/js/9.f95a0311.js" as="script"><link rel="prefetch" href="/assets/js/10.c3f62f16.js"><link rel="prefetch" href="/assets/js/3.5a2f475b.js"><link rel="prefetch" href="/assets/js/4.e7c996f5.js"><link rel="prefetch" href="/assets/js/5.6eff8140.js"><link rel="prefetch" href="/assets/js/6.17d5dd20.js"><link rel="prefetch" href="/assets/js/7.a4b50fe3.js"><link rel="prefetch" href="/assets/js/8.02f24fcc.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.e4d8b86b.css">
+    <link rel="preload" href="/assets/css/0.styles.85f901d9.css" as="style"><link rel="preload" href="/assets/js/app.e5a58d1f.js" as="script"><link rel="preload" href="/assets/js/2.576a400c.js" as="script"><link rel="preload" href="/assets/js/15.6c8c8378.js" as="script"><link rel="prefetch" href="/assets/js/10.bc4fe853.js"><link rel="prefetch" href="/assets/js/11.35e35f5b.js"><link rel="prefetch" href="/assets/js/12.41dface9.js"><link rel="prefetch" href="/assets/js/13.c662d148.js"><link rel="prefetch" href="/assets/js/14.cfdb3d71.js"><link rel="prefetch" href="/assets/js/16.fc3d9b0e.js"><link rel="prefetch" href="/assets/js/17.f56bf64a.js"><link rel="prefetch" href="/assets/js/3.e7e7adea.js"><link rel="prefetch" href="/assets/js/4.2428183e.js"><link rel="prefetch" href="/assets/js/5.69530501.js"><link rel="prefetch" href="/assets/js/6.c04237e7.js"><link rel="prefetch" href="/assets/js/7.d6addb13.js"><link rel="prefetch" href="/assets/js/8.e7f013f7.js"><link rel="prefetch" href="/assets/js/9.18f1566b.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.85f901d9.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" class="home-link router-link-active"><img src="/logo.png" alt="系统工程事业部学习平台" class="logo"> <span class="site-name can-hide">系统工程事业部学习平台</span></a> <div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/fast-learning/" class="nav-link">
@@ -24,18 +24,12 @@
   代码提交规范
 </a></li><li class="dropdown-item"><!----> <a href="/standard/code-formatter-standard.html" class="nav-link">
   代码格式化
-</a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="学习视频" class="dropdown-title"><span class="title">学习视频</span> <span class="arrow down"></span></button> <button type="button" aria-label="学习视频" class="mobile-dropdown-title"><span class="title">学习视频</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/backend-code-standard/" class="nav-link">
+</a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="学习视频" class="dropdown-title"><span class="title">学习视频</span> <span class="arrow down"></span></button> <button type="button" aria-label="学习视频" class="mobile-dropdown-title"><span class="title">学习视频</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/learning-video/js-code-standard/design-mode.html" class="nav-link">
   JS
-</a></li><li class="dropdown-item"><!----> <a href="/javascript-code-standard/" class="nav-link">
+</a></li><li class="dropdown-item"><!----> <a href="/learning-video/front-end/g2plot.html" class="nav-link">
   前端
-</a></li><li class="dropdown-item"><!----> <a href="/javascript-code-standard/" class="nav-link">
-  WebGIS
-</a></li><li class="dropdown-item"><!----> <a href="/front-code-standard/" class="nav-link">
-  后端
-</a></li><li class="dropdown-item"><!----> <a href="/backend-code-standard/" class="nav-link">
+</a></li><li class="dropdown-item"><!----> <a href="/learning-video/database/pg-sql.html" class="nav-link">
   数据库
-</a></li><li class="dropdown-item"><!----> <a href="/backend-code-standard/" class="nav-link">
-  代码质量
 </a></li></ul></div></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/fast-learning/" class="nav-link">
   快速学习
 </a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="规范" class="dropdown-title"><span class="title">规范</span> <span class="arrow down"></span></button> <button type="button" aria-label="规范" class="mobile-dropdown-title"><span class="title">规范</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/standard/js-code-standard.html" class="nav-link">
@@ -48,19 +42,13 @@
   代码提交规范
 </a></li><li class="dropdown-item"><!----> <a href="/standard/code-formatter-standard.html" class="nav-link">
   代码格式化
-</a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="学习视频" class="dropdown-title"><span class="title">学习视频</span> <span class="arrow down"></span></button> <button type="button" aria-label="学习视频" class="mobile-dropdown-title"><span class="title">学习视频</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/backend-code-standard/" class="nav-link">
+</a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="学习视频" class="dropdown-title"><span class="title">学习视频</span> <span class="arrow down"></span></button> <button type="button" aria-label="学习视频" class="mobile-dropdown-title"><span class="title">学习视频</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/learning-video/js-code-standard/design-mode.html" class="nav-link">
   JS
-</a></li><li class="dropdown-item"><!----> <a href="/javascript-code-standard/" class="nav-link">
+</a></li><li class="dropdown-item"><!----> <a href="/learning-video/front-end/g2plot.html" class="nav-link">
   前端
-</a></li><li class="dropdown-item"><!----> <a href="/javascript-code-standard/" class="nav-link">
-  WebGIS
-</a></li><li class="dropdown-item"><!----> <a href="/front-code-standard/" class="nav-link">
-  后端
-</a></li><li class="dropdown-item"><!----> <a href="/backend-code-standard/" class="nav-link">
+</a></li><li class="dropdown-item"><!----> <a href="/learning-video/database/pg-sql.html" class="nav-link">
   数据库
-</a></li><li class="dropdown-item"><!----> <a href="/backend-code-standard/" class="nav-link">
-  代码质量
 </a></li></ul></div></div> <!----></nav>  <!----> </aside> <main class="page"> <div class="theme-default-content content__default"><h2 id="代码规范"><a href="#代码规范" class="header-anchor">#</a> 代码规范</h2></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.6bfe8101.js" defer></script><script src="/assets/js/2.ff92ebee.js" defer></script><script src="/assets/js/9.f95a0311.js" defer></script>
+    <script src="/assets/js/app.e5a58d1f.js" defer></script><script src="/assets/js/2.576a400c.js" defer></script><script src="/assets/js/15.6c8c8378.js" defer></script>
   </body>
 </html>
