--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     <link rel="icon" href="/logo.png" type="image/x-icon">
     <meta name="description" content="">
     
-    <link rel="preload" href="/assets/css/0.styles.e4d8b86b.css" as="style"><link rel="preload" href="/assets/js/app.6bfe8101.js" as="script"><link rel="preload" href="/assets/js/6.17d5dd20.js" as="script"><link rel="prefetch" href="/assets/js/10.c3f62f16.js"><link rel="prefetch" href="/assets/js/2.ff92ebee.js"><link rel="prefetch" href="/assets/js/3.5a2f475b.js"><link rel="prefetch" href="/assets/js/4.e7c996f5.js"><link rel="prefetch" href="/assets/js/5.6eff8140.js"><link rel="prefetch" href="/assets/js/7.a4b50fe3.js"><link rel="prefetch" href="/assets/js/8.02f24fcc.js"><link rel="prefetch" href="/assets/js/9.f95a0311.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.e4d8b86b.css">
+    <link rel="preload" href="/assets/css/0.styles.85f901d9.css" as="style"><link rel="preload" href="/assets/js/app.e5a58d1f.js" as="script"><link rel="preload" href="/assets/js/8.e7f013f7.js" as="script"><link rel="prefetch" href="/assets/js/10.bc4fe853.js"><link rel="prefetch" href="/assets/js/11.35e35f5b.js"><link rel="prefetch" href="/assets/js/12.41dface9.js"><link rel="prefetch" href="/assets/js/13.c662d148.js"><link rel="prefetch" href="/assets/js/14.cfdb3d71.js"><link rel="prefetch" href="/assets/js/15.6c8c8378.js"><link rel="prefetch" href="/assets/js/16.fc3d9b0e.js"><link rel="prefetch" href="/assets/js/17.f56bf64a.js"><link rel="prefetch" href="/assets/js/2.576a400c.js"><link rel="prefetch" href="/assets/js/3.e7e7adea.js"><link rel="prefetch" href="/assets/js/4.2428183e.js"><link rel="prefetch" href="/assets/js/5.69530501.js"><link rel="prefetch" href="/assets/js/6.c04237e7.js"><link rel="prefetch" href="/assets/js/7.d6addb13.js"><link rel="prefetch" href="/assets/js/9.18f1566b.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.85f901d9.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.6bfe8101.js" defer></script><script src="/assets/js/6.17d5dd20.js" defer></script>
+    <script src="/assets/js/app.e5a58d1f.js" defer></script><script src="/assets/js/8.e7f013f7.js" defer></script>
   </body>
 </html>
